<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_background_1"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rel"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@drawable/gradient_background_2">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/main_screen_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentBottom="true"
            app:fontFamily="@font/futura_medium"
            app:title="@string/app_name"
            app:titleTextColor="#FFFFFF" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/now_playing_song"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"
            android:text="@string/category_my_music"
            android:textAllCaps="true"
            android:textColor="@color/text_color"
            android:textSize="48sp"
            android:textStyle="italic"
            app:fontFamily="@font/road_rage" />


        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="360dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="24dp"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/gradient_background_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_screen_artists"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/category_artists"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="32sp"
                    app:fontFamily="@font/road_rage" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="360dp"
            android:layout_height="72dp"
            android:layout_gravity="center_horizontal|center_vertical"
            android:layout_marginBottom="24dp"
            card_view:cardBackgroundColor="@color/card_color"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/gradient_background_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_screen_albums"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/category_albums"
                    android:textAllCaps="true"
                    android:textColor="@color/text_color"
                    android:textSize="32sp"
                    app:fontFamily="@font/road_rage" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="360dp"
            android:layout_height="72dp"
            android:layout_marginBottom="24dp"
            card_view:cardBackgroundColor="@color/card_color"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/gradient_background_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_screen_songs"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/category_songs"
                    android:textAllCaps="true"
                    android:textColor="@color/text_color"
                    android:textSize="32sp"
                    app:fontFamily="@font/road_rage" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="360dp"
            android:layout_height="72dp"
            card_view:cardBackgroundColor="@color/card_color"
            card_view:cardCornerRadius="8dp"
            card_view:cardElevation="8dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="fitXY"
                android:src="@drawable/gradient_background_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/main_screen_now_playing"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="?attr/selectableItemBackground"
                    android:clickable="true"
                    android:focusable="true"
                    android:gravity="center"
                    android:singleLine="true"
                    android:text="@string/category_now_playing"
                    android:textAllCaps="false"
                    android:textColor="@color/text_color"
                    android:textSize="32sp"
                    app:fontFamily="@font/road_rage" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</FrameLayout>